@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 3.0.7 update 1
 ----------------------------------------------------------------------
-   6 Enhancements
+   7 Enhancements
    1 Bug fix
    1 Localisation update
 ----------------------------------------------------------------------
@@ -36,6 +36,10 @@ and
 
   - New option in the XLIFF filter: force shortcut to "f" for 
 <it pos="end"> tags
+
+  - A new QA rule was added to check_rules.groovy. It will be triggered
+if the source segment ends with a full stop, and the target segment
+does not, or the reverse
 
   Bug fixes:
 
